--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en-fr">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Faux Site de Cabinet Medical</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+  <!-- <meta name="theme-color" content="#fafafa"> -->
 </head>
 
 <body>
+    <header class="background-top">
+        
+    </header>
+
+    <main>
+        <figure class="background" >
+            <img src="img/medical-background.png" alt="background">
+        </figure>
+
+        <section class="text" >
+          <h1>Accueil</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nostrum ipsa totam aperiam.
+               Aut,eligendi doloribus dolore atque ratione consequatur officia adipisci voluptatum magnam.
+                cum blanditiis perferendis laudantium vero quae!</p>
+
+        </section>
+    
+    </main>
+
+    <footer>
+      <!--  Menu  -->
+        <nav class="navbot">
+          <ul>
+            <li class="link"><a href="index.html">Accueil</a></li>
+            <li class="link"><a href="html/contact.html">Contact</a></li>
+            <li class="link"><a href="html/fiche_med.html">Fiche de Médecin</a></li>
+            <li class="link"><a href="html/horraires.html">Horraires</a></li>
+            <li class="link"><a href="html/a_propos.html">A Propos</a></li>
+            <li class="link"><a href="html/urgence.html">Urgence</a></li>
+          </ul>
+        </nav>
+    </footer>
+
+
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
+
+  <!-- 
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+
+  <!--
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script> 
+  -->
 </body>
 
 </html>
